# rust-diesel-ORM-walk-around

./: .env.example  Cargo.toml  README.md
migrations/2023-01-30-231203_create_books/: down.sql  up.sql
public/: 404.html  index.html
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs
