[package]
name = "diesel-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["mysql"] }
dotenv = "0.15.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0.80"
serde_derive  = "1.0.80"
serde_json = "1.0.91"
rocket = "0.5.0-rc.2"
rocket_codegen_next = { git = "https://github.com/SergioBenitez/Rocket.git", branch="master" }

[dependencies.rocket_contrib]
version = "0.4.0-dev"
default_features = false
features = [ "json", "serve"]

[patch.crates-io.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket.git"
rev = "ad0ba0d"